Bug 113848 - Sidebar: Changing page orientation of user-defined size let disappear the page
Summary: Sidebar: Changing page orientation of user-defined size let disappear the page
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Ilhan Yesil
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords:
Depends on:
Blocks: Sidebar-Properties-Page
  Show dependency treegraph
 
Reported: 2017-11-15 09:52 UTC by Thomas Lendo
Modified: 2018-10-16 10:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of orientation change (22.13 KB, image/png)
2017-11-15 09:52 UTC, Thomas Lendo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Lendo 2017-11-15 09:52:53 UTC
Created attachment 137774 [details]
Screenshot of orientation change

Changing page orientation of user-defined size let disappear the page.

Steps to reproduce:
1. Open Writer document.
2. Open Sidebar > Page.
3. Change page format width to 10 cm.
4. Change page format height to 15 cm.
5. change page format orientation from Portrait to Landscape.

Actual result:
Page disappears in normal view.
Width and height changes to 0,00 cm.

Expected result:
Page orientation changes in view to what user want.

Version: 6.0.0.0.alpha1+
Build ID: d73225119476de1826f648acca9e93bf6797e813
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: de-DE (de_DE); Calc: CL
Comment 1 Dieter 2017-11-15 16:54:23 UTC
Reproducible

Version: 6.0.0.0.alpha1 (x64)
Build ID: c1d1f859b268f650143d48f294999cda0fa57350
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: de-DE (de_DE); Calc: group

Additional information: If you change page orientation via Format => Page everything is fine.
Comment 2 Commit Notification 2018-08-30 10:39:42 UTC
Ilhan Yesil committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=32bf352c61754fe5ef39e0794b5d6dc71be99194

tdf#113848 Sidebar: Get user-defined sizes while changing orientation

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2018-10-11 11:43:40 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 59ed21b1720db5fd0326e1b723483b288725e662
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Ilhan Yesil, thanks for fixing this!

Cherry-picked to 6.1 -> https://gerrit.libreoffice.org/#/c/61667/
Comment 4 Commit Notification 2018-10-16 10:35:27 UTC
Ilhan Yesil committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=577e16a03f689ac906cbe68e8528b422ecccf99b&h=libreoffice-6-1

tdf#113848 Sidebar: Get user-defined sizes while changing orientation

It will be available in 6.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.