tdf#113848 Sidebar: Get user-defined sizes while changing orientation

If the orientation of the page is changed, the user
defined page sizes are now accessed directly to swap the sizes
correctly.

Change-Id: I91d256d35dcd910a8c3151a3f9e669413c9a57db